automatically backed up by learn

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,8 +6,7 @@
 $(function () {
   $(".js-more").on('click', function() {
     var id = $(this).data("id");
-    $.get("/posts/" + id + "/body", function(data) {
-      // Replace text of body-id div
+    $.get("/posts/" + id + "/post_data", function(data) {
       $("#body-" + id).text(data);
     });
   });
